fix: hide author info on mobile for hero left section

--- a/src/components/home/hero/hero.module.css
+++ b/src/components/home/hero/hero.module.css
@@ -25,7 +25,7 @@
   padding-top: 20px;
   color: rgb(160, 157, 157);
   display: flex;
-  gap: 40px;
+  gap: 10px;
 }
 
 .more {
@@ -140,5 +140,11 @@
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .author_info {
+    display: none;
   }
 }
